--- a/home.css
+++ b/home.css
@@ -16,7 +16,7 @@ body {
 /* Header */
 header {
     background-color: darkblue;
-    color: white;
+    color: lighblue;
     padding: 20px 0;
 }
 
