--- a/modellek.css
+++ b/modellek.css
@@ -121,7 +121,7 @@ section#models {
     display: inline-block;
     width: 30%;
     margin: 20px;
-    background-color: darkolivegreen;
+    background-color: gray;
     padding: 15px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
