--- a/rolunk.css
+++ b/rolunk.css
@@ -184,3 +184,11 @@ nav ul li a:hover {
 .description p {
     line-height: 1.5;
 }
+
+/* Footer */
+footer {
+    background-color: #333;
+    color: white;
+    padding: 10px 0;
+    text-align: center;
+}
